--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,22 @@ img {
     center/cover;
 }
 
+.showcase::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
+}
+
 .showcase-top {
   position: relative;
   height: 90px;
+  z-index: 2;
 }
 
 .showcase-top img {
@@ -81,6 +94,7 @@ img {
   align-items: center;
   text-align: center;
   margin-top: 9rem;
+  z-index: 2;
 }
 
 .showcase-content h1 {
