--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* CSS Variables We can update these whenever*/
 :root {
   --primary-color: #e50914;
+  --dark-color: #141414;
 }
 
 /* Reset sizing */
@@ -113,6 +114,40 @@ img {
   margin: 0 0 2rem;
 }
 
+/* Tabs */
+.tabs {
+  background: var(--dark-color);
+  padding-top: 1rem;
+  border-bottom: 3px solid #3d3d3d;
+}
+
+.tabs .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  align-items: center;
+  justify-self: center;
+  text-align: center;
+}
+
+.tabs p {
+  font-size: 1.2rem;
+  padding-top: 0.5rem;
+}
+
+/* Only selects elements which are direct children of parent element */
+.tabs .container > div {
+  padding: 1.5rem 0;
+}
+
+.tabs .container > div:hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+.tab-border {
+  border-bottom: 3px solid var(--primary-color);
+}
 /* Buttons */
 .btn {
   display: inline-block;
@@ -147,4 +182,12 @@ img {
   font-size: 1rem;
   padding: 0.8rem 1.3rem;
   text-transform: uppercase;
+}
+
+/* Container */
+.container {
+  max-width: 70%;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
 }
