--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,32 @@ img {
   background: #222;
 }
 
+.footer {
+  max-width: 75%;
+  margin: 1rem auto;
+  overflow: auto;
+}
+
+.footer,
+.footer a {
+  color: #999;
+  font-size: 0.9rem;
+}
+
+.footer .footer-cols {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.footer .footer-cols li {
+  line-height: 1.9rem;
+}
+
+.footer p {
+  margin-bottom: 1.5rem;
+}
+
 /* Buttons */
 .btn {
   display: inline-block;
