--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,18 @@ img {
   color: #fff;
 }
 
+/* Hide content initiallu */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+
+/* TRY NOT TO USE IMPORTANT!! */
+.show {
+  display: block !important;
+}
+
 #tab-1-content .tab-1-content-inner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
